--- a/notbooks/motif.ipynb
+++ b/notbooks/motif.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(40, 790)"
+       "(107, 790)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,65 +32,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PIT1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     22\n",
-       "ZN394_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)    22\n",
-       "TBR1_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)     22\n",
-       "CR3L1_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)    22\n",
-       "OLIG2_HUMAN.H11MO.1.B Distance From Peak(sequence,strand,conservation)    23\n",
-       "PO2F3_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)    23\n",
-       "NKX61_HUMAN.H11MO.1.B Distance From Peak(sequence,strand,conservation)    23\n",
-       "BATF_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)     23\n",
-       "DLX1_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)     23\n",
-       "FOXB1_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)    23\n",
-       "JUNB_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)     24\n",
-       "JUND_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)     24\n",
-       "JUN_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      24\n",
-       "TBX5_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)     24\n",
-       "PO5F1_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)    25\n",
-       "HXD8_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)     25\n",
-       "FOSL1_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)    25\n",
-       "PO2F1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)    25\n",
-       "NF2L2_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)    25\n",
-       "FOSL2_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)    26\n",
-       "FOSB_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)     26\n",
-       "PO3F3_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)    26\n",
-       "PO3F4_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)    26\n",
-       "FOS_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      26\n",
-       "PO3F1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)    28\n",
-       "PO2F2_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)    28\n",
-       "SOX2_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)     29\n",
-       "P5F1B_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)    29\n",
-       "NANOG_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)    34\n",
-       "PO5F1_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)    35\n",
-       "Nearest Ensembl                                                           36\n",
-       "Nearest Unigene                                                           36\n",
-       "Chr                                                                       40\n",
-       "Gene Description                                                          40\n",
-       "Gene Alias                                                                40\n",
-       "Gene Name                                                                 40\n",
-       "Start                                                                     40\n",
-       "GC%                                                                       40\n",
-       "End                                                                       40\n",
-       "Nearest PromoterID                                                        40\n",
-       "Strand                                                                    40\n",
-       "Peak Score                                                                40\n",
-       "Nearest Refseq                                                            40\n",
-       "Annotation                                                                40\n",
-       "Detailed Annotation                                                       40\n",
-       "Distance to TSS                                                           40\n",
-       "CpG%                                                                      40\n",
-       "Entrez ID                                                                 40\n",
-       "Gene Type                                                                 40\n",
+       "ZSC22_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     82\n",
+       "SP4_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)       82\n",
+       "ZBT17_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)     83\n",
+       "ZN263_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)     83\n",
+       "ZN770_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     84\n",
+       "ZFX_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)       85\n",
+       "KLF9_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)      85\n",
+       "SP3_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)       86\n",
+       "SP4_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)       86\n",
+       "KLF3_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)      86\n",
+       "AP2D_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)      86\n",
+       "EGR2_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      86\n",
+       "E2F6_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      86\n",
+       "HEN1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)      87\n",
+       "KLF6_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      87\n",
+       "THAP1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     87\n",
+       "MECP2_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     88\n",
+       "E2F4_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      89\n",
+       "SP1_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)       89\n",
+       "SP1_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)       89\n",
+       "KLF15_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)     89\n",
+       "EGR4_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)      89\n",
+       "SP2_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)       91\n",
+       "ZBT14_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     91\n",
+       "E2F4_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)      91\n",
+       "E2F1_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      91\n",
+       "MBD2_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)      92\n",
+       "WT1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)       93\n",
+       "PATZ1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     93\n",
+       "CR3L1_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)     95\n",
+       "Nearest Ensembl                                                           101\n",
+       "Nearest Unigene                                                           103\n",
+       "Entrez ID                                                                 107\n",
+       "GC%                                                                       107\n",
+       "Chr                                                                       107\n",
+       "Start                                                                     107\n",
+       "End                                                                       107\n",
+       "Strand                                                                    107\n",
+       "CpG%                                                                      107\n",
+       "Peak Score                                                                107\n",
+       "Annotation                                                                107\n",
+       "Gene Description                                                          107\n",
+       "Gene Alias                                                                107\n",
+       "Detailed Annotation                                                       107\n",
+       "Gene Name                                                                 107\n",
+       "Distance to TSS                                                           107\n",
+       "Nearest Refseq                                                            107\n",
+       "Nearest PromoterID                                                        107\n",
+       "Gene Type                                                                 107\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
