--- a/notbooks/motif.ipynb
+++ b/notbooks/motif.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(107, 790)"
+       "(1067, 790)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,65 +32,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ZSC22_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     82\n",
-       "SP4_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)       82\n",
-       "ZBT17_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)     83\n",
-       "ZN263_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)     83\n",
-       "ZN770_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     84\n",
-       "ZFX_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)       85\n",
-       "KLF9_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)      85\n",
-       "SP3_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)       86\n",
-       "SP4_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)       86\n",
-       "KLF3_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)      86\n",
-       "AP2D_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)      86\n",
-       "EGR2_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      86\n",
-       "E2F6_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      86\n",
-       "HEN1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)      87\n",
-       "KLF6_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      87\n",
-       "THAP1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     87\n",
-       "MECP2_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     88\n",
-       "E2F4_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      89\n",
-       "SP1_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)       89\n",
-       "SP1_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)       89\n",
-       "KLF15_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)     89\n",
-       "EGR4_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)      89\n",
-       "SP2_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)       91\n",
-       "ZBT14_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     91\n",
-       "E2F4_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)      91\n",
-       "E2F1_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      91\n",
-       "MBD2_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)      92\n",
-       "WT1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)       93\n",
-       "PATZ1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     93\n",
-       "CR3L1_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)     95\n",
-       "Nearest Ensembl                                                           101\n",
-       "Nearest Unigene                                                           103\n",
-       "Entrez ID                                                                 107\n",
-       "GC%                                                                       107\n",
-       "Chr                                                                       107\n",
-       "Start                                                                     107\n",
-       "End                                                                       107\n",
-       "Strand                                                                    107\n",
-       "CpG%                                                                      107\n",
-       "Peak Score                                                                107\n",
-       "Annotation                                                                107\n",
-       "Gene Description                                                          107\n",
-       "Gene Alias                                                                107\n",
-       "Detailed Annotation                                                       107\n",
-       "Gene Name                                                                 107\n",
-       "Distance to TSS                                                           107\n",
-       "Nearest Refseq                                                            107\n",
-       "Nearest PromoterID                                                        107\n",
-       "Gene Type                                                                 107\n",
+       "HES1_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)      631\n",
+       "WT1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)       632\n",
+       "ZN563_HUMAN.H11MO.1.C Distance From Peak(sequence,strand,conservation)     633\n",
+       "TFDP1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     633\n",
+       "SP4_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)       638\n",
+       "AP2B_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)      642\n",
+       "KLF3_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)      643\n",
+       "E2F6_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      644\n",
+       "TAF1_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      645\n",
+       "RFX1_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)      645\n",
+       "E2F7_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)      645\n",
+       "HEY2_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)      647\n",
+       "SP3_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)       649\n",
+       "PATZ1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     653\n",
+       "MECP2_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     663\n",
+       "ZFX_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)       666\n",
+       "ZN341_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     670\n",
+       "ZN770_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     673\n",
+       "ZBT14_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     678\n",
+       "SP1_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)       687\n",
+       "EGR4_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)      689\n",
+       "E2F4_HUMAN.H11MO.1.A Distance From Peak(sequence,strand,conservation)      693\n",
+       "SP1_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)       696\n",
+       "AP2D_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)      697\n",
+       "E2F1_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      698\n",
+       "MBD2_HUMAN.H11MO.0.B Distance From Peak(sequence,strand,conservation)      700\n",
+       "E2F4_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)      705\n",
+       "THAP1_HUMAN.H11MO.0.C Distance From Peak(sequence,strand,conservation)     713\n",
+       "SP2_HUMAN.H11MO.0.A Distance From Peak(sequence,strand,conservation)       721\n",
+       "CR3L1_HUMAN.H11MO.0.D Distance From Peak(sequence,strand,conservation)     931\n",
+       "Nearest Unigene                                                            961\n",
+       "Nearest Ensembl                                                            968\n",
+       "Entrez ID                                                                 1066\n",
+       "Gene Name                                                                 1066\n",
+       "Gene Alias                                                                1066\n",
+       "Gene Description                                                          1066\n",
+       "Gene Type                                                                 1066\n",
+       "Nearest Refseq                                                            1066\n",
+       "Chr                                                                       1067\n",
+       "Start                                                                     1067\n",
+       "End                                                                       1067\n",
+       "Strand                                                                    1067\n",
+       "GC%                                                                       1067\n",
+       "Annotation                                                                1067\n",
+       "Detailed Annotation                                                       1067\n",
+       "CpG%                                                                      1067\n",
+       "Distance to TSS                                                           1067\n",
+       "Nearest PromoterID                                                        1067\n",
+       "Peak Score                                                                1067\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
